# portfolio-sbarthel

./: .gitignore  experiment_log.txt  pyproject.toml
1-hypertuning-gridsearch/: analyze_results.py  experiment_journal.md  experiment_journal_template.md  experiment_summary.csv  extract_tensorboard_metrics.py  grid_search_experiments.py  report.md  report_template.md  run_experiments.ps1  summary.md
2-hypertuning-mlflow/: analyze_mlflow_results.py  experiment_journal.md  mlflow_experiments.py  report.md  report_template.md  run_experiments.ps1  summary.md
2-hypertuning-mlflow/results/: experiment_summary.csv
3-hypertuning-rnn/: analyze_rnn_results.py  experiment_journal.md  mlflow.db  monitor_progress.py  notebook.ipynb  report.md  rnn_experiments.py  summary.md
3-hypertuning-rnn/results/: rnn_experiment_summary.csv
4-hypertuning-ray/: analyze_results.py  check_dims.py  check_gpu.py  experiment_journal.md  experiment_summary.csv  hypertune.py  inspect_data.py  inspect_data_v2.py  report.md  run_experiments.ps1  summary.md
4-hypertuning-ray/results/: experiment_summary.csv  summary_stats.json
5-deployment/: summary.md
5-deployment/2-frontend/quotegen_app/: README.md  pyproject.toml
5-deployment/2-frontend/quotegen_app/backend/: app.py
5-deployment/2-frontend/quotegen_app/backend/static/: styles.css
5-deployment/2-frontend/quotegen_app/src/quotegen/: custom_logger.py  datatools.py  main.py
5-deployment/2-frontend/straattaal/backend/static/: index.html
5-deployment/quotegen_app/: .dockerignore  .gcloudignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  quotegen.toml
5-deployment/quotegen_app/backend/: app.py  requirements.txt  utils.py
5-deployment/quotegen_app/backend/static/: index.html  styles.css
5-deployment/quotegen_app/src/quotegen/: custom_logger.py  datatools.py  main.py  models.py
6-hackathon/: project_cuddlefish.md
7-ethics/: breeze_case_study.md  ethical_frameworks.md  summary.md
