[project]
name = "portfolio-sbarthel"
version = "0.1.0"
description = "Portfolio of Stijn Barthel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "mads-datasets[torch]>=0.3.14",
    "mltrainer>=0.1.10",
    "tomlserializer>=0.2.0",
    "toml>=0.10.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchtext>=0.15.0",
    "tensorboard>=2.0.0",
    "torch-tb-profiler>=0.4.0",
    "matplotlib>=3.0.0",
    "seaborn>=0.11.0",
    "pandas>=2.0.0",
    "ray[tune]>=2.5.0",
    "mlflow>=3.0.0",
    "bayesian-optimization>=1.4.0",
    "configspace>=0.7.0",
    "hpbandster>=0.7.4",
    "gin-config>=0.5.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.0.0",
]

[dependency-groups]
dev = [
    "notebooktester>=0.2.1",
    "ruff>=0.12.11",
]
