[project]
name = "quotegen"
version = "0.1.0"
description = "Generate quotes using a Markov chain"
authors = [
    { name = "Stijn Barthel", email = "s.a.barthel@student.han.nl" }
]
dependencies = [
    "loguru>=0.7.2",
    "numpy",
    "torch>=2.0", # Kept for compatibility with original setup, though not used by new model
    "matplotlib>=3.9.2",
    "requests>=2.32.5",
    "kaggle>=1.6.0", # Added for downloading data
    "pandas>=2.0.0"  # Added for reading CSV
]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
scrape = [
    # No longer needed, but kept to maintain structure
]
frontend = [
    "fastapi[standard]>=0.115.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quotegen"]